# gesture-sound

./: .gitignore  LICENSE  README.md  sconstruct  sconstruct~  setup.sh
app/GestoosClient/config/: gestures320.ini  gestures320.ini~  hand.ini  whai.ini  whai.ini~
app/GestoosClient/src/: interactor  interactor.cpp  interactor.hpp
app/GestoosDetector/src/: GestoosDetector  GestoosDetector.cpp
app/ServerStateMachine/src/: Control  Control.cpp  Control.hpp  FIFOd3data.cpp  FIFOd3data.hpp  FIFOmididata.cpp  FIFOmididata.hpp  PlayPause.cpp  PlayPause.hpp  Pushing.cpp  Pushing.hpp  SMServer.cpp  Sliding.cpp  Sliding.hpp  StateMachine.cpp  StateMachine.hpp  d3message.cpp  d3message.hpp  sound.cpp  sound.hpp  statemachine
app/WHAIDemo/: CMakeLists.txt
app/WHAIDemo/src/: WHAIDemo  WHAIDemo.cpp  interactor  interactor.cpp
